commit with spark (using jdk 11)